# TimeTracker

./: Cargo.toml  LICENSE  README.md  run.sh
client/: Cargo.toml
client/src/: main.rs
daemon/: Cargo.toml
daemon/src/: dbus.rs  main.rs
gui/: Cargo.toml
gui/src/: main.rs
lib/: Cargo.toml
lib/src/: config.rs  lib.rs  time.rs
package/: Cargo.toml  time-tracker.desktop
package/.rpm/: package.spec
package/distribution/systemd/: postinst  postrm  prerm  service
