[package]
name = "time-tracker"
version = "0.1.0"
edition = "2021"
authors = ["Tobias Schaffner <tobiasschaffner87@outlook.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.0", features = ["derive"] }
ttlib = { path = "../lib" }
