[package]
name = "time-tracker-daemon"
version = "0.1.0"
edition = "2021"
authors = ["Tobias Schaffner <tobiasschaffner87@outlook.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dbus = "0.9.5"
dirs = "4.0.0"

ttlib = { path = "../lib" }