[package]
name = "ttlib"
version = "0.1.0"
edition = "2021"
authors = ["Tobias Schaffner <tobiasschaffner87@outlook.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
chrono-tz = "0.6.1"
dirs = "4.0.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"